k8s/kustomize/app/example-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: example-app
